--- a/app/templates/admin_pages/commentaires_gestion.html
+++ b/app/templates/admin_pages/commentaires_gestion.html
@@ -3,6 +3,10 @@
 {% block main %}
     <h1>administration ville</h1>
     <div>
+        <form action="" method="GET" class="filter">
+            <input type="text" name="search" name="search">
+            <input type="submit" value="filtrer">
+        </form>
         <table border = 1>
             <thead>
                 <tr>
