--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -11,7 +11,7 @@
 <body>
     {% comment %} <h1>C'est l'administration</h1> {% endcomment %}
     <div class="container">
-        <nav class="main_menu">
+        <nav class="main-menu">
             <div class="logo">
                 <img src="{% static 'assets/travelMor-logo-black.png' %}" alt="LOGO TRAVEL MOR">
             </div>
@@ -27,10 +27,14 @@
                 <li><a href="{% url "pays_gestion" %}">Pays</a></li>
             </ul>
         </nav>
-        <div class="secondary-menu">
-            <h3>deconnexion</h3>
+        <div class="inner-container">
+            <div class="secondary-menu">
+                menu
+                <h3>deconnexion</h3>
+            </div>
+            {% block main %} 
+            {% endblock main %}
         </div>
-        <main>{% block main %} {% endblock main %}</main>
     </div>
     {% block js_block %}{% endblock js_block %}
 </body>
