adding info to dashbord section

--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -16,9 +16,9 @@
                 <img src="{% static 'assets/travelMor-logo-black.png' %}" alt="LOGO TRAVEL MOR">
             </div>
             <ul>
-                <li><a href="{% url "commentaires_gestion" %}">Dashboard</a></li>
-                <li><a href="{% url "commentaires_gestion" %}">Voyages</a></li>
-                <li><a href="{% url "commentaires_gestion" %}">Hotels</a></li>
+                <li><a href="{% url "dashboard_gestion" %}">Dashboard</a></li>
+                <li><a href="{% url "voyages_gestion" %}">Voyages</a></li>
+                <li><a href="{% url "hotels_gestion" %}">Hotels</a></li>
                 <li><a href="{% url "promotions_gestion" %}">Promotions</a></li>
                 <li><a href="{% url "vols_gestion" %}">Vols</a></li>
                 <li><a href="{% url "notifications_gestion" %}">Notifications</a></li>
