--- a/app/templates/admin_pages/commentaires_gestion.html
+++ b/app/templates/admin_pages/commentaires_gestion.html
@@ -1,7 +1,7 @@
 {% extends 'admin_pages/base.html' %}
-{% block title %} Ville {% endblock title %}
+{% block title %} Commentraires {% endblock title %}
 {% block main %}
-    <h1>administration ville</h1>
+    <h1>administration Commentraires</h1>
     <div>
         <form action="" method="GET" class="filter">
             <input type="text" name="search" name="search">
