--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -45,6 +45,7 @@ header {
     background-color: rgb(255, 255, 255);
     z-index: 998;
     width: 100%;
+    transition: top .4s;
 }
 
 header .inner1 {
@@ -482,7 +483,7 @@ body .container {
 .mini-card-hotel .body .price, .mini-card-voyage .body .price {
     position: relative;
     z-index: 0;
-    margin-block: 5px;
+    margin-block: 10px;
     color: rgb(255, 255, 255);
     font-weight: 600;
 }
@@ -491,9 +492,9 @@ body .container {
     position: absolute;
     top:-20px ;
     left:-30px ;
-    width: 200px;
+    width: 210px;
     z-index: -1;
-    transform: rotate(-10deg);
+    transform: rotate(-2deg);
 }
 
 .mini-card-hotel .body form button, .mini-card-voyage .body form button {
@@ -530,8 +531,6 @@ body .container {
     background-color: #fff;
     max-width: 100%;
     margin: 20px 100px;
-    padding: 20px;
-    height: 500px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -542,32 +541,132 @@ body .container {
     overflow: hidden;
 }
 
-.detailed-card-voyage .image {
+.detailed-card-voyage .accordion {
     width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 650px;
     position: relative;
-    border: 1px solid green;
+}
+
+
+.detailed-card-voyage .accordion .mySlides {
+    display: none;
+}
+
+.detailed-card-voyage .accordion .mySlides img {
+    vertical-align: middle;
+    width: auto;
+    height: 500px;
+}
+  
+.detailed-card-voyage .accordion .cursor {
+    cursor: pointer;
+}
+  
+.detailed-card-voyage .accordion .prev,
+.detailed-card-voyage .accordion .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+  
+.detailed-card-voyage .accordion .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+  
+.detailed-card-voyage .accordion .prev:hover,
+.detailed-card-voyage .accordion .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+  
+.detailed-card-voyage .accordion .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+  
+.detailed-card-voyage .accordion .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+}
+
+.detailed-card-voyage .accordion .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.detailed-card-voyage .accordion .row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+  
+.detailed-card-voyage .accordion .column {
+    float: left;
+    width: 16.66%;
+}
+  
+.detailed-card-voyage .accordion .demo {
+    opacity: 0.6;
+}
+  
+.detailed-card-voyage .accordion .active,
+.detailed-card-voyage .accordion .demo:hover {
+    opacity: 1;
 }
 
 .detailed-card-voyage .body {
-    width: 100%;
-    height: fit-content;
+    padding: 10px 20px;
+    width: 400px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-
+    align-items: start;
+    gap: 20px;
+    font-size: 1.5rem;
 }
 
-.detailed-card-voyage .image img {
-    overflow: hidden;
-    width: 100%; 
-    height: auto; 
-    display: block;
-    object-fit: cover;
+.detailed-card-voyage .body .title {
+    font-weight: bold;
+}
+
+.detailed-card-voyage .body .title {
+    font-weight: bold;
+}
+
+.detailed-card-voyage .body form {
+    width: 100%;
+}
+
+.detailed-card-voyage .body button {
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+    background-color: var(--main--green);
+    font-weight: 600;
+    margin: auto;
+    transition: all .2s ease;
+}
+
+.detailed-card-voyage .body button:hover {
+    opacity: .9;
 }
 
 /* vols styling */
@@ -605,16 +704,19 @@ body .container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 8;
 }
 
-.vol .image-vol .from, .vol .image-vol .to {
+.vol .image-vol .duration {
+    padding-top: 5px;
+    margin-top: 10px;
+    border-top: 1px solid var(--second-underline);
     font-weight: 600;
     font-style: italic;
 }
 
+
 .vols-box .vol img {
-    width: 80px;
+    width: 100px;
     height: auto;
 }
 
@@ -627,7 +729,7 @@ body .container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
     margin: 20px auto;
     border-radius: var(--main-border-radius);
     box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
@@ -636,10 +738,52 @@ body .container {
     max-width: 800px;
 }
 
+.comments form {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+#add-comment {
+    width: 75%;
+    height: 50px;
+    resize: none; 
+    border: none;
+    outline: none;
+    padding: 15px;
+    align-self: flex-start;
+}
+
+#add-comment:focus {
+    border: none;
+    outline: none;
+}
+
+form #add-comment + button {
+    position: absolute;
+    right: 15px;
+    top: 22px;
+    width: fit-content;
+    padding: 5px 10px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: var(--main--green);
+    border-radius: var(--main-border-radius);
+    color: #fff;
+    font-weight: 600;
+}
+
+
 .comments .comment {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding-inline: 15px;
     width: 100%;
     min-height: 150px;
 }
@@ -674,6 +818,7 @@ body .container {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .comments .comment .evaluation-time {
@@ -692,6 +837,26 @@ body .container {
     color: orange;
 }
 
+.comments .evaluation-interact {
+    position: absolute;
+    top: 25px;
+    right: 70px;
+}
+
+.comments .evaluation-interact .checked {
+    color: orange;
+}
+
+.comments .evaluation-interact .star {
+    cursor: pointer;
+    transition: color .2s  ease-in;
+}
+
+.comments .evaluation-interact .star:hover {
+    /* Zoom the star by 1.2 times */
+    transform: scale(1.1);
+    color: orange;
+}
 
 /* footer styles */
 
