--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -404,9 +404,18 @@
                 document.getElementById("myOverlay").style.display = "none";
                 document.querySelector("header .search").style.display = "block";
             }
-            //if (event.target != document.querySelector(".inner1 .menu")) {
-            //    document.querySelector(".inner1 .menu").style.display = "none";
-            //}
+        }
+
+        /* When the user scrolls down, hide the navbar. When the user scrolls up, show the navbar */
+        var prevScrollpos = window.pageYOffset;
+        window.onscroll = function() {
+        var currentScrollPos = window.pageYOffset;
+        if (prevScrollpos > currentScrollPos) {
+            document.getElementsByTagName("header")[0].style.top = "0";
+        } else {
+            document.getElementsByTagName("header")[0].style.top = "-60px";
+        }
+        prevScrollpos = currentScrollPos;
         }
     </script>
 </body>
