--- a/app/templates/visitor/special_asie.html
+++ b/app/templates/visitor/special_asie.html
@@ -9,7 +9,7 @@
         {% if avoir_instance.id_voyage.id_categorie.nom_categorie == "special_asie"%} 
     <div class="mini-card-voyage">
         <div class="image">
-            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
+            <img src="{% static "assets/cities/" %}" alt="">
             <span class="reaction">
                 <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
             </span>
@@ -18,6 +18,7 @@
             <div class="title-localisation">
                 <span class="title">{{ avoir_instance.id_voyage.titre_voyage }}</span>
                 <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir_instance.id_ville.id_pays.nom_pays }}, {{ avoir_instance.id_ville.nom_ville }}</span>
+                <span>{{avoir_instance.id_voyage.id_ville.imageville__set}}</span>
             </div>
             <span class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing">Prix: <span>{{ avoir_instance.id_voyage.prix_voyage }} Dhs</span></span>
             <span class="nom-hotel">Nom hotel: <span>{{ avoir_instance.id_voyage.id_hotel.nom_hotel }}</span></span>
