--- a/app/templates/visitor/voyage_organise_details.html
+++ b/app/templates/visitor/voyage_organise_details.html
@@ -79,7 +79,7 @@
             <i class="fa fa-star star"></i>
         {% endfor %}
     </div>
-    <textarea name="comment" id="add-comment" placeholder="Entrer un commentaire..."></textarea>
+    <textarea name="comment" class="add-comment" placeholder="Entrer un commentaire..."></textarea>
     <button type="submit">Ok</button>
 </form>
 {% for comment in comments %}
